# rust-ffi_types

./: .clang-format  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
cxx/: 0header.hxx  1boxed.hxx  2slice.hxx  7rust_impl.hxx  8cpp_impl.hxx  8cxx_impl.hxx  9footer.hxx  test.cxx
include/: rust_types.hxx
src/: boxed.rs  c.rs  cbindgen.rs  convert.rs  lib.rs  slice.rs  str.rs
xtask/: Cargo.toml
xtask/src/: main.rs
