[package]
name = "ffi_types"
description = "C ABI compatible wrappers for cbindgen/bindgen."
version = "0.0.18"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/youknowone/rust-ffi_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1"
cbindgen = { version = "0", default-features = false }
libc = { version = "0.2", default-features = false }
static_assertions = "1"
cc = "1.0.83"

[dependencies]
cbindgen = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
static_assertions = { workspace = true }

[dev-dependencies]

[build-dependencies]
anyhow = { workspace = true }
cbindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }

[features]
default = ["cxx"]
cxx = ["cbindgen", "libc"]
vec = []
__build_header = ["cbindgen", "cc"]  # This is not a user feature

[lib]
name = "ffi_types"
crate-type = ["staticlib", "rlib"]

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
